# benlife

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: app.rs  controls.rs  grid.rs  lib.rs  main.rs  render.rs  rle.rs  universe.rs
