[package]
authors = ["Ben Lovy <ben@deciduously.com>", "Dan Lovy <danlovy1961@gmail.com>"]
description = "A Conway's Game of Life GUI"
edition = "2021"
license = "Unlicensed"
name = "benlife"
publish = false
repository = "https://github.com/deciduously/benlife"
version = "0.1.0"

[dependencies]
crossbeam = "0.8"
eframe = "0.22"
image = "0.24"
parking_lot = "0.12"
rand = "0.8"
rfd = "0.11"

[dev-dependencies]
pretty_assertions = "1.2"
indoc = "2.0"

[profile.release]
lto = true
strip = true